--- a/resources/assets/css/style.css
+++ b/resources/assets/css/style.css
@@ -1,664 +1,27 @@
-:root {
-  --white: #fefefe;
-  --lblue: #17b5fe75;
-  --beetsblk: #161616;
-  --gray: gray;
-  --lipRed: #7a3130;
-  --blue: #1e8af6;
-}
-
-body,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: 'Lato', sans-serif;
-}
-body,
-html {
-  height: 100%;
-  line-height: 1.8;
-}
-
-
-textarea {
- 
-  height: 25rem;
-}
-.word-break {
-  word-break: break-all;
-  word-wrap: break-word;
-}
-.fullHeight {
-  height: 100vh;
-}
-
-.text-shadow {
-  text-shadow: 5px 5px 4px rgba(0, 0, 0, 0.719);
-}
-.tmargin4 {
-  margin-top: 4em;
-}
-.margin2rem {
-  margin: 2rem;
-}
-.width100 {
-  width: 100%;
-}
-.width20 {
-  width: 19.999999% !important;
-}
-.width19half {
-  width: 19.5% !important;
-}
-
-.font-weight-bold {
-  font-weight: bold !important;
-}
-.colorBlk {
-  color: var(--beetsblk)
-}
-.colorBlu {
-  color: var(--blue);
-}
-.backgroundBlu {
-  background: var(--blue);
-}
-
-.color-theme-black {
-  background: var(--beetsblk) !important;
-  color: whitesmoke !important;
-}
-.color-theme-white {
-  background: var(--white) !important;
-  color: var(--beetsblk) !important;
-}
-.color-theme-brightness {
-  filter: brightness(200%)
-}
-.color-theme-shadow {
-  filter: drop-shadow(8px 8px 2px rgba(128, 128, 128, 0.74))
-}
-.color-theme-contrast {
-  filter: contrast(150%)
-}
-.color-theme-saturate {
-  filter: saturate(8)
-}
-
-.backTrans {
-  background-color: transparent !important;
-}
-.backgroundblack {
-  background: var(--beetsblk) !important;
-  color: whitesmoke !important;
-}
-.whtbtn {
-  background: var(--gray);
-  color: var(--beetsblk);
-}
-.color-white {
-  color: var(--white)
-}
-.thinBorder {
-  border: 1px solid var(--beetsblk);
-}
-
-#top-span {
-  position: absolute;
-  top: -9vh;
-}
-
-.top-bar-btn-container {
-  display: flex;
-justify-content: space-evenly;
-}
-.top-nav-bar-btn {
-  font-size: large;
-  box-sizing: border-box;
-}
-.top-nav-bar-btn:hover {
-  transform: scale(1.001) translate(1px, 1px);
-}
-.message-notification {
-  position: absolute
-}
-.message-notification-number {
-  font-size: 8px;
-  position: relative;
-  left: 5.7px;
-  bottom: 8px
-}
-
-/* hamburger menu button */
-.menu-btn-wrapper {
-  background-color: var(--beetsblk);
-  position: fixed;
-  right: 0;
-  top: 0;
-  width: 4.6rem;
-  height: 3.9rem;
-  border-bottom-left-radius: 100%;
-  z-index: 2000;
-}
-.menu-btn {
-  position: fixed;
-  right: .1rem;
-  top: 0.3rem;
-  width: 3.2em;
-  height: 2.3em;
-  cursor: pointer;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.hamburger {
-  position: absolute;
-  right: 0.6em;
-  top: 1.1em;
-  width: 2em;
-  height: 0.2em;
-  background-color: white;
-}
-.top-bur-bar {
-  position: absolute;
-  right: 0.6em;
-  top: 0.4em;
-  width: 2em;
-  height: 0.2em;
-  background-color: white;
-}
-.btm-bur-bar {
-  position: absolute;
-  right: 0.9em;
-  top: 1.8em;
-  width: 1.7em;
-  height: 0.2em;
-  background-color: white;
-}
-.burger {
-  -webkit-animation: ham linear 300ms;
-  animation: ham linear 300ms;
-}
-@keyframes ham {
-  from {
-    transform: rotate(360deg);
-  }
-  to {
-    transform: rotate(0deg);
-  }
-}
-@-webkit-keyframes ham {
-  from {
-    transform: rotate(360deg);
-  }
-  to {
-    transform: rotate(0deg);
-  }
-}
-.top-burger-bar {
-  transform: rotate(45deg) translate(5px, 8px);
-}
-
-.bottom-burger-bar {
-  width: 2em !important;
-  transform: rotate(-45deg) translate(8px, -8px);
-}
-/* end burger menu dropdown */
-
-/* feet */
-.feet {
-  position: absolute;
-  left: -5rem;
-  top: 20rem;
-  height: 3.5rem;
-  width: 4rem;
-  z-index: 2;
-  transform: rotate(135deg);
-}
-
-
-/* *********call to action top  logo ******************* */
-.cta-main {
-  margin-top: 65px;
-  width: 100vw;
-  font-size: 8vw;
-
-}
-.cta-word-container {
-margin-left: 1rem; 
-}
-.cool-blue-main-text {
-  text-shadow: 0px 4px 2px rgba(0, 0, 0, 0.55);
-}
-.az-img-text-wrapper {
-  display: flex;
-}
-.cta-sub {
-  display: inline-block;
-  text-shadow: none;
-  font-size: 4.5vw;
-}
-.cta-sub-two {
-  font-size: 3vw;
-}
-.az-image {
-  position: relative;
-  bottom: 1rem;
-  width: 3rem;
-  height: 4rem;
-}
-
-/************** owl Carousel ******************/
-
-.single-slide {
-  width: 100vw;
-  display: flex;
-  align-items: center;
-}
-.welcome-text-1 {
-  color: var(--beetsblk);
-}
-
-
-/* ************First image ***************** */
-.top-img-box {
-  width: 128%;
-  height: 66vh;
-
-}
-.top-text-container {
-  position: relative;
-  width: 128%;
-  height: 66vh;
-  overflow: hidden;
-  border-top: 1px solid var(--beetsblk);
-}
-
-.bgimg-1-1 {
-  background: url('');
-  position: absolute;
-  width: 80%;
-  height: 110%;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  -webkit-animation: top-img linear 40000ms infinite;
-  animation: top-img linear 40000ms infinite;
-  background-size: cover;
-
-}
-
-.bgimg-1-2 {
-  background: url('');
-  position: absolute;
-  width: 80%;
-  height: 110%;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  -webkit-animation: top-img linear 40000ms infinite;
-  animation: top-img linear 40000ms infinite;
-  background-size: cover;
-
-}
-
-@-webkit-keyframes top-img {
-  0% {
-    -webkit-transform: scale(1.3);
-    -ms-transform: scale(1.3);
-    transform: scale(1.3);
-  }
-  50% {
-    -webkit-transform: scale(1);
-    -ms-transform: scale(1);
-    transform: scale(1);
-  }
-  100% {
-    -webkit-transform: scale(1.3);
-    -ms-transform: scale(1.3);
-    transform: scale(1.3);
-  }
-}
-@keyframes top-img {
-  0% {
-    -webkit-transform: scale(1.3);
-    -ms-transform: scale(1.3);
-    transform: scale(1.3);
-  }
-  50% {
-    -webkit-transform: scale(1);
-    -ms-transform: scale(1);
-    transform: scale(1);
-  }
-  100% {
-    -webkit-transform: scale(1.3);
-    -ms-transform: scale(1.3);
-    transform: scale(1.3);
-  }
-}
-
-/* Create a Parallax Effect */
-.bgimg-2,
-.bgimg-3 {
-  background-attachment: fixed;
-  /* background-attachment: scroll; */
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-/* Second image (service) */
-.bgimg-2 {
-  background-image: url('../img/goodman.jpg');
-  height: 50vh;
-}
-
-/* Third image (Contact) */
-.bgimg-3 {
-  background-image: url('../img/peopleWorking.jpg');
-  height: 50vh;
-}
-
-.w3-wide {
-  letter-spacing: 10px;
-}
-.w3-hover-opacity {
-  cursor: pointer;
-}
-
-
-/* The Modal (background) */
-.modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1000; /* Sit on top */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0, 0, 10, 0.7); /* Black w/ opacity */
-}
-
-/* Modal Content/Box */
-.modal-content {
-  margin: 15% auto; /* 15% from the top and centered */
-  padding: 20px;
-  border: 1px solid var(--blue);
-  width: 80%; 
-}
-
-
-/* The Close Button */
-.close {
-  position: relative;
-  z-index: 9;
-  top: 25%;
-  left: 90%;
-  color: #aaa;
-  font-size: 38px;
-  font-weight: bold;
-
-}
-
-.close:hover,
-.close:focus {
-  color: var(--blue);
-  text-decoration: none;
-  cursor: pointer;
-}
-
-/* .review-wrapper {
-  margin: 1rem;
-  overflow: hidden;
-  display: flex;
-}
-.review {
-  margin: 0 2rem;
-margin-top: 10%;
-  line-height: 2.2rem;
-  font-size: large;
-  font-style: italic;
-} */
-.top-general-btn-wrapper {
-  display: flex;
-
-}
-.general-btn {
-  width: 19.999%;
-}
-
-.reference-image {
-  width: 90%;
-  height: auto;
-}
-.blog-bar {
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-}
-
 /********* image magnifier ************/
 
 .img-magnifier-container {
-  position: relative;
-  box-sizing: border-box
-}
-
-.img-magnifier-glass {
-  position: absolute;
-  border: 3px solid #000;
-  border-radius: 50%;
-  cursor: none;
-  /*Set the size of the magnifier glass:*/
-  width: 150px;
-  height: 150px;
-  box-sizing: border-box
-}
-
-
-
-
-
- /* The flip box container -  */
-.flip-box {
-  background-color: transparent;
-  width: 400px;
-  height: 325px;
-  border: 1px solid #f1f1f1;
-  perspective: 1000px; /*  3D effect */
-}
-
-.flip-box-small{
-  background-color: transparent;
-  width: 300px;
-  height: 205px;
-  border: 1px solid #f1f1f1;
-  perspective: 1000px; /*  3D effect */
-}
-
-/* This container is needed to position the front and back side */
-.flip-box-inner {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  transition: transform 0.8s;
-  transform-style: preserve-3d;
-}
-
-/* Do an horizontal flip when you move the mouse over the flip box container */
-.flip-box:hover .flip-box-inner {
-  transform: rotateY(180deg);
-}
-
-.flip-box-small:hover .flip-box-inner {
-  transform: rotateY(180deg);
-}
-
-/* Position the front and back side */
-.flip-box-front, .flip-box-back {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  -webkit-backface-visibility: hidden; /* Safari */
-  backface-visibility: hidden;
-}
-
-/* Style the front side (fallback if image is missing) */
-.flip-box-front {
-  background-color: #bbb;
-  color: black;
-}
-
-/* Style the back side */
-.flip-box-back {
-  background-color: dodgerblue;
-  color: white;
-  transform: rotateY(180deg);
-}
-
-
-/* Style the buttons that are used to open and close the accordion panel */
-.accordion {
-  background-color: #eee;
-  color: #444;
-  cursor: pointer;
-  padding: 18px;
-  width: 100%;
-  text-align: left;
-  border: none;
-  outline: none;
-  transition: 0.4s;
-}
-
-/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
-.active, .accordion:hover {
-  color:#000!important;
-  background-color:#1e8af6!important;
-}
-
-/* Style the accordion panel. Note: hidden by default */
-.panel {
-  padding: 0 18px;
-  background-color: white;
-  display: none;
-  overflow: hidden;
-}
-
-
-.footer {
-  display: flex;
-  justify-content: center;
-}
-
-
-
-
-
-/* //beginning of the media query section */
-@media only screen and (max-width: 1000px){
-  .top-text-container {
-    height: 72vh;
-  }
-  .review-wrapper {
-    flex-direction: column;
-  }
-  .modal-content {
-    width: 90%;
-  }
-  .close {
-    top: 9vh;
-  }
- 
-}
-
-
-@media only screen and (max-width: 601px){
-  .top-text-container {
-    height: 76vh;
-  }
-    .cta-main {
-      margin-top: 10px;
-    font-size: 15vw;
-
-  }
-  .cta-sub {
-    font-size: 10vw;
-    display: block;
-  }
-
-  .az-image {
-    bottom: 5px;
-    width: 1.3rem;
-    height: 2rem;
-  } 
-  .top-general-btn-wrapper {
-    flex-direction: column;
-  }
-  .general-btn {
-    width: 100%;
-  }
-  .img-magnifier-container{
-    margin-top: 32px;
-  }
-}
-
-
-@media only screen and (max-width : 400px){
-
-  .close {
-    top: 5vh;
-    left: 80%;
-  }
-
-}
-
-
-@media screen and (min-width: 780px) {
-  #portfolio1 {
     position: relative;
-    left: 9vw;
+    box-sizing: border-box
   }
-
-  #portfolio2 {
-    position: relative;
-    bottom: 25vh;
+  
+  .img-magnifier-glass {
+    position: absolute;
+    border: 3px solid #000;
+    border-radius: 50%;
+    cursor: none;
+    /*Set the size of the magnifier glass:*/
+    width: 150px;
+    height: 150px;
+    box-sizing: border-box
   }
-  .portfolio-back-img {
-    position: relative;
-    left: 3vw;
-    bottom: 7vh;
-    z-index: 1;
-  }
- 
-}
+  
 
-/* ********** custom scroll bar ************ */
+@media (max-width: 600px) {
 
-/* width */
-::-webkit-scrollbar {
-  width: 10px;
+    #home {
+        margin-top: 54px;
+    }
 }
-
-/* Track */
-::-webkit-scrollbar-track {
-  /* background:  var(--blue); */
-  background: #161616;
-}
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-  background: #222;
-}
-
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-  background: #555;
-}
+  
+  
